--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About me</title>
+    <meta name="author" content="Chand Rahmani" />
+    <meta name="keywords" content="Chand Rahmani, chand resume, chand online resume, chand github" />
+    <meta name="description" content=" In ♥️ With Coding, 📷 Photography and Travelling and Cricket" />
+    <title>Chand Rahmani | About Me</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
